# django-rest-api

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: autoapprove.yaml  automerge.yaml  automerge.yml  deploy-qa.yaml  test.yaml
api/clients/python/: django_rest_api_README.md
api/clients/python/.openapi-generator/: FILES
api/clients/python/django_rest_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
api/clients/python/django_rest_api/api/: __init__.py  sample_api.py
api/clients/python/django_rest_api/docs/: Sample.md  SampleApi.md
api/clients/python/django_rest_api/models/: __init__.py  sample.py
api/clients/python/django_rest_api/test/: test_sample.py  test_sample_api.py
api/clients/typescript/: runtime.ts
api/clients/typescript/.openapi-generator/: FILES
api/clients/typescript/apis/: SampleApi.ts  index.ts
api/clients/typescript/models/: Sample.ts  index.ts
api/django_project/: .coveragerc  .flake8  manage.py  mypy.ini  pyproject.toml  pytest.ini
api/django_project/django_project/: asgi.py  auth_utils.py  celery.py  celery_beat_liveness.py  celery_readiness.py  celery_worker_liveness.py  settings.py  settings_prod.py  settings_qa.py  settings_test.py  urls.py
api/django_project/rest_api/: channels.py
api/django_project/rest_api/events/: __init__.py
api/django_project/rest_api/factory/: repo.py
api/django_project/rest_api/management/commands/: createadmin.py  elasticmigrate.py  rebuild_indexes.py
api/django_project/rest_api/modules/: auth0.py  cdn_storage.py  es_module.py  geo.py  mixpanel.py  nylas.py  object_storage.py  redis_module.py  sendgrid.py  stripe.py  twilio.py
api/django_project/rest_api/repositories/: common.py
api/django_project/rest_api/serializers/: sample.py
api/django_project/rest_api/services/: auth0.py  cdn.py  elastic.py  geo.py  hcp.py  mixpanel.py  nylas.py  onepassword.py  s3.py  sendgrid.py  stripe.py  twilio.py  websocket.py
api/django_project/rest_api/tasks/: elastic.py
api/django_project/rest_api/tests/: test_sample.py
api/django_project/rest_api/views/: sample.py
infrastructure/: format_file.sh  gen_clients.sh  gen_types.sh  helm-values.yaml  webapp_lint.sh
infrastructure/celery-flower/: Dockerfile
infrastructure/celery-scheduler/: Dockerfile  entry.sh
infrastructure/celery-worker/: Dockerfile  entry.sh
infrastructure/remote-dev/: Dockerfile
infrastructure/rest-api/: Dockerfile  entry.sh
infrastructure/web-app/: Dockerfile  entry.sh  env_files.sh
web-app/landing/: .gitignore  env.development.tmpl  env.test.tmpl  package.json  pnpm-lock.yaml
web-app/landing/src/app/health/: page.tsx
