[tool.poetry]
name = "django_project"
version = "0.1.0"
description = ""
authors = ["John Doherty"]

[tool.poetry.dependencies]
python = "^3.13"
Django = "^5.2.6"
djangorestframework = "^3.16.1"
Markdown = "^3.9"
django-filter = "^25.1"
celery = "^5.5.3"
django-celery-beat = "^2.8.1"
channels = "^4.3.1"
redis = "^6.4.0"
flower = "^2.0.1"
django-cors-headers = "^4.9.0"
channels-redis = "^4.3.0"
SQLAlchemy = "^2.0.43"
auth0-python = "^4.13.0"
cryptography = "^46.0.1"
drf-jwt = "^1.19.2"
PyJWT = "^2.10.1"
requests = "^2.32.5"
elasticsearch = "^8.19.1"
gunicorn = "^23.0.0"
celery-singleton = "^0.3.1"
types-requests = "^2.32.4"
whitenoise = "^6.11.0"
pydantic = "^2.11.9"
injector = "^0.22.0"
pyyaml = "^6.0"
uritemplate = "^4.2.0"
debugpy = "^1.8.17"
geopy = "^2.3.0"
boto3 = "^1.40.34"
sendgrid = "^6.12.4"
transitions = "^0.9.3"
redis-lock = "^0.2.0"
types-redis = "^4.6.0.2"
faker = "^37.8.0"
types-python-dateutil = "^2.9.0.20250822"
ics = "^0.7.2"
pytest = "^8.4.2"
coverage = "^7.10.7"
pytest-cov = "^7.0.0"
pytest-django = "^4.11.1"
structlog = "^25.4.0"
stripe = "^12.5.1"
django-money = "^3.4.1"
twilio = "^9.8.1"
croniter = "^6.0.0"
inflection = "^0.5.1"
mixpanel = "^4.11.1"
polyfactory = "^2.22.2"
uvicorn = "^0.37.0"
uvicorn-worker = "^0.3.0"
opentelemetry-api = "^1.27.0"
opentelemetry-sdk = "^1.27.0"
opentelemetry-exporter-otlp = "^1.27.0"
opentelemetry-instrumentation-django = "^0.48b0"
opentelemetry-instrumentation-celery = "^0.48b0"
opentelemetry-instrumentation-elasticsearch = "^0.48b0"
opentelemetry-instrumentation-redis = "^0.48b0"
opentelemetry-instrumentation-asgi = "^0.48b0"
opentelemetry-instrumentation-requests = "^0.48b0"
opentelemetry-instrumentation-psycopg2 = "^0.48b0"
setuptools = "^80.9.0"
django-storages = "^1.14.6"
psycopg2 = "^2.9.10"
typing-extensions = "^4.15.0"
gevent = "^25.9.1"
pyopenssl = "^25.3.0"
ruff = "^0.13.1"
types-boto3 = "^1.40.33"
pre-commit = "^4.3.0"
openapi-generator-cli = {extras = ["jdk4py"], version = "^7.15.0"}
shopifyapi = "^12.7.0"
elasticsearch-dsl = "^8.17.1"
onepassword-sdk = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]
exclude = [
    "**/tests/**",
    "**/migrations/*",
    "**/django_project/**",
    "**/management/**",
    "manage.py",
]
ignore = ["D", "TC003", "TC002", "TC001", "ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"**/rest_api/utils/query_builder.py" = ["ALL"]