[tool.poetry]
name = "django_project"
version = "0.1.0"
description = ""
authors = ["John Doherty"]

[tool.poetry.dependencies]
python = "^3.13"
Django = "^5.2.8"
djangorestframework = "^3.16.1"
Markdown = "^3.10"
django-filter = "^25.2"
celery = "^5.5.3"
django-celery-beat = "^2.8.1"
channels = "^4.3.1"
redis = "^7.0.1"
flower = "^2.0.1"
django-cors-headers = "^4.9.0"
channels-redis = "^4.3.0"
SQLAlchemy = "^2.0.44"
auth0-python = "^4.13.0"
cryptography = "^46.0.3"
drf-jwt = "^1.19.2"
PyJWT = "^2.10.1"
requests = "^2.32.5"
elasticsearch = "^8.19.2"
gunicorn = "^23.0.0"
celery-singleton = "^0.3.1"
types-requests = "^2.32.4"
whitenoise = "^6.11.0"
pydantic = "^2.12.4"
injector = "^0.22.0"
pyyaml = "^6.0"
uritemplate = "^4.2.0"
debugpy = "^1.8.17"
geopy = "^2.3.0"
boto3 = "^1.40.72"
sendgrid = "^6.12.4"
transitions = "^0.9.3"
redis-lock = "^0.2.0"
types-redis = "^4.6.0.2"
faker = "^38.0.0"
types-python-dateutil = "^2.9.0.20251108"
ics = "^0.7.2"
pytest = "^9.0.1"
coverage = "^7.11.3"
pytest-cov = "^7.0.0"
pytest-django = "^4.11.1"
structlog = "^25.5.0"
stripe = "^13.2.0"
django-money = "^3.4.1"
twilio = "^9.8.6"
croniter = "^6.0.0"
inflection = "^0.5.1"
mixpanel = "^5.0.0"
polyfactory = "^2.22.4"
uvicorn = "^0.38.0"
uvicorn-worker = "^0.4.0"
opentelemetry-api = "^1.27.0"
opentelemetry-sdk = "^1.27.0"
opentelemetry-exporter-otlp = "^1.27.0"
opentelemetry-instrumentation-django = "^0.48b0"
opentelemetry-instrumentation-celery = "^0.48b0"
opentelemetry-instrumentation-elasticsearch = "^0.48b0"
opentelemetry-instrumentation-redis = "^0.48b0"
opentelemetry-instrumentation-asgi = "^0.48b0"
opentelemetry-instrumentation-requests = "^0.48b0"
opentelemetry-instrumentation-psycopg2 = "^0.48b0"
setuptools = "^80.9.0"
django-storages = "^1.14.6"
psycopg2 = "^2.9.11"
typing-extensions = "^4.15.0"
gevent = "^25.9.1"
pyopenssl = "^25.3.0"
ruff = "^0.14.5"
types-boto3 = "^1.40.71"
pre-commit = "^4.4.0"
openapi-generator-cli = {extras = ["jdk4py"], version = "^7.17.0"}
shopifyapi = "^12.7.0"
elasticsearch-dsl = "^8.17.1"
onepassword-sdk = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]
exclude = [
    "**/tests/**",
    "**/migrations/*",
    "**/django_project/**",
    "**/management/**",
    "manage.py",
]
ignore = ["D", "TC003", "TC002", "TC001", "ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"**/rest_api/utils/query_builder.py" = ["ALL"]